[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/Objects/SignPosts1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Object-scripts/smallSignPost.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Dialog/DialogBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Enemies/PlayerDetectionArea.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[node name="smallSignPost" type="Node2D"]
position = Vector2( 0, -16 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -15 )
texture = ExtResource( 1 )

[node name="DialogBox" parent="." instance=ExtResource( 3 )]
margin_left = -64.0
margin_top = -32.0
margin_right = -64.0
margin_bottom = -32.0

[node name="Polygon2D" parent="DialogBox" index="0"]
position = Vector2( 0, -21 )

[node name="RichTextLabel" parent="DialogBox/Polygon2D" index="0"]
margin_left = 2.0
margin_top = 4.0
margin_right = 248.0
margin_bottom = 52.0

[node name="PlayerDetectionArea" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, 15 )

[node name="CollisionShape2D" parent="PlayerDetectionArea" index="0"]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="RayCast2D" parent="PlayerDetectionArea" index="1"]
position = Vector2( 0, 2 )

[connection signal="body_exited" from="PlayerDetectionArea" to="." method="_on_PlayerDetectionArea_body_exited"]

[editable path="DialogBox"]
[editable path="PlayerDetectionArea"]
